<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.apache</groupId>
        <artifactId>apache</artifactId>
        <version>29</version>
    </parent>
    <artifactId>cdc_client</artifactId>
    <version>1.0.0</version>
    <name>Doris Cdc Client</name>
    <url>https://doris.apache.org/</url>
    <licenses>
        <license>
            <name>Apache 2.0 License</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:https://git@github.com/apache/doris.git</connection>
        <developerConnection>scm:git:https://git@github.com/apache/doris.git</developerConnection>
        <url>scm:git:https://git@github.com/apache/doris.git</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/apache/doris/issues</url>
    </issueManagement>
    <mailingLists>
        <mailingList>
            <name>Dev Mailing List</name>
            <post>dev@doris.apache.org</post>
            <subscribe>dev-subscribe@doris.apache.org</subscribe>
            <unsubscribe>dev-unsubscribe@doris.apache.org</unsubscribe>
        </mailingList>
        <mailingList>
            <name>Commits Mailing List</name>
            <post>commits@doris.apache.org</post>
            <subscribe>commits-subscribe@doris.apache.org</subscribe>
            <unsubscribe>commits-unsubscribe@doris.apache.org</unsubscribe>
        </mailingList>
    </mailingLists>
    <properties>
        <spring.version>3.5.7</spring.version>
        <flink.version>1.20.3</flink.version>
        <slf4j.version>1.7.36</slf4j.version>
        <doris.version>1.2-SNAPSHOT</doris.version>
        <spotless.version>2.43.0</spotless.version>
        <checkstyle.version>8.14</checkstyle.version>
        <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
        <httpcomponents.version>4.5.13</httpcomponents.version>
        <lombok.version>1.18.24</lombok.version>
        <commons-codec.version>1.15</commons-codec.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
                <!--                <exclusion>-->
                <!--                    <groupId>log4j</groupId>-->
                <!--                    <artifactId>*</artifactId>-->
                <!--                </exclusion>-->
                <!--                <exclusion>-->
                <!--                    <groupId>org.slf4j</groupId>-->
                <!--                    <artifactId>*</artifactId>-->
                <!--                </exclusion>-->
                <!--                <exclusion>-->
                <!--                    <groupId>org.apache.logging.log4j</groupId>-->
                <!--                    <artifactId>*</artifactId>-->
                <!--                </exclusion>-->
                <!--                <exclusion>-->
                <!--                    <groupId>ch.qos.logback</groupId>-->
                <!--                    <artifactId>logback-classic</artifactId>-->
                <!--                </exclusion>-->
                <!--                <exclusion>-->
                <!--                    <groupId>org.apache.logging.log4j</groupId>-->
                <!--                    <artifactId>log4j-slf4j-impl</artifactId>-->
                <!--                </exclusion>-->
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-connector-mysql-cdc</artifactId>
            <version>3.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-clients</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-connector-base</artifactId>
            <version>${flink.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-table-api-java-bridge</artifactId>
            <version>${flink.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpcomponents.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-codec</groupId>
                    <artifactId>commons-codec</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>cdc-client</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.0.3.RELEASE</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>1.17.0</version>
                            <style>AOSP</style>
                        </googleJavaFormat>

                        <removeUnusedImports/>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <!-- Note: match version with docs/flinkDev/ide_setup.md -->
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skip>true</skip>
                    <suppressionsLocation>../../fe/check/suppressions.xml</suppressionsLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <configLocation>../../fe/check/checkstyle.xml</configLocation>
                    <logViolationsToConsole>true</logViolationsToConsole>
                    <failOnViolation>true</failOnViolation>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>